# ghostpost_backend

./: README.md  db.sqlite3  manage.py  pyproject.toml
Ghostpost_BE/: asgi.py  settings.py  urls.py  wsgi.py
homepage/: admin.py  models.py  serializers.py  views.py
homepage/migrations/: 0001_initial.py  0002_boastsroasts_post_type.py  0003_auto_20200929_0515.py  0004_auto_20200930_0347.py  0005_remove_boastsroasts_total_votes.py  0006_boastsroasts_total_votes.py
